--- a/index.html
+++ b/index.html
@@ -1,49 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gym Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sophia Smith - Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Welcome to Our Gym</h1>
-            <p>Your path to fitness starts here!</p>
-        </div>
-    </header>
+  <header>
+    <h1>Sophia Smith</h1>
+    <p>Full Stack Developer</p>
+  </header>
 
+  <main>
     <section id="about">
-        <div class="container">
-            <h2>About Us</h2>
-            <p>At our gym, we're dedicated to helping you achieve your fitness goals in a welcoming and supportive environment. Whether you're new to exercise or a seasoned fitness enthusiast, our team is here to guide you on your journey to better health and wellness.</p>
-            <p>Discover more about our gym and what sets us apart. Learn about our mission, values, and commitment to helping you reach your fitness potential. With state-of-the-art facilities and experienced trainers, we provide the resources and support you need to succeed.</p>
-        </div>
+      <img src="./IMG_20200731_190056_218.jpg" alt="Sophia Smith">
+      <p>
+        I am a passionate full stack developer with expertise in building dynamic web applications. I love turning ideas into reality through code.
+      </p>
     </section>
 
-    <section id="classes">
-        <div class="container">
-            <h2>Our Classes</h2>
-            <div class="class">
-                <h3>Yoga</h3>
-                <p>A gentle way to increase flexibility, strength, and reduce stress.</p>
-            </div>
-            <div class="class">
-                <h3>Strength Training</h3>
-                <p>Build muscle and tone your body with our strength training classes.</p>
-            </div>
-            <div class="class">
-                <h3>Cardio</h3>
-                <p>Get your heart pumping and burn calories with our cardio workouts.</p>
-            </div>
-        </div>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML & CSS</li>
+        <li>JavaScript</li>
+        <li>React.js</li>
+        <li>Node.js</li>
+        <li>Express.js</li>
+        <li>MongoDB</li>
+      </ul>
     </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Gym Name. All rights reserved.</p>
-        </div>
-    </footer>
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>E-commerce Website</h3>
+        <img src="./IMG_20210204_213041_334.jpg" alt="Project 1 Screenshot">
+        <p>
+          A fully functional e-commerce website built with React.js and Node.js. Allows users to browse products, add them to cart, and complete orders.
+        </p>
+        <a href="#">View Details</a>
+      </div>
+      <!-- More project entries can be added here -->
+    </section>
+
+    <section id="resume">
+      <h2>Resume</h2>
+      <a href="sophia-smith-resume.pdf" download>Download Resume</a>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <ul>
+        <li><a href="mailto:sophia@example.com">sophia@example.com</a></li>
+        <li><a href="tel:+1234567890">123-456-7890</a></li>
+        <li><a href="https://www.linkedin.com/in/sophia-smith">LinkedIn</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Sophia Smith</p>
+  </footer>
 </body>
 </html>
