--- a/index.html
+++ b/index.html
@@ -1,67 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sophia Smith - Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Sophia Smith</h1>
-    <p>Full Stack Developer</p>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculator</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <h1>Level 2</h1>
+    <h1>Task 1: <u>CALCULATOR</u></h1>
+    <br />
+    <br />
+    <hr />
+    <br />
+    <br />
 
-  <main>
-    <section id="about">
-      <img src="./IMG_20200731_190056_218.jpg" alt="Sophia Smith">
-      <p>
-        I am a passionate full stack developer with expertise in building dynamic web applications. I love turning ideas into reality through code.
-      </p>
-    </section>
-
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>HTML & CSS</li>
-        <li>JavaScript</li>
-        <li>React.js</li>
-        <li>Node.js</li>
-        <li>Express.js</li>
-        <li>MongoDB</li>
-      </ul>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <div class="project">
-        <h3>E-commerce Website</h3>
-        <img src="./IMG_20210204_213041_334.jpg" alt="Project 1 Screenshot">
-        <p>
-          A fully functional e-commerce website built with React.js and Node.js. Allows users to browse products, add them to cart, and complete orders.
-        </p>
-        <a href="#">View Details</a>
-      </div>
-      <!-- More project entries can be added here -->
-    </section>
-
-    <section id="resume">
-      <h2>Resume</h2>
-      <a href="sophia-smith-resume.pdf" download>Download Resume</a>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <ul>
-        <li><a href="mailto:sophia@example.com">sophia@example.com</a></li>
-        <li><a href="tel:+1234567890">123-456-7890</a></li>
-        <li><a href="https://www.linkedin.com/in/sophia-smith">LinkedIn</a></li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Sophia Smith</p>
-  </footer>
-</body>
+    <div id="container" class="container">
+      <form name="calculator">
+        <div class="wrapper">
+          <!-- Input Section -->
+          <div class="InputArea">
+            <input
+              id="inputBox"
+              type="text"
+              name="userInput"
+              placeholder="0"
+              disabled
+            />
+          </div>
+          <!-- Button Section -->
+          <div class="buttons">
+            <div class="btnC btnr1">
+              <input id="ButtonC" type="button" value="C" />
+            </div>
+            <div class="btnMod btnr1">
+              <input id="Button(" type="button" value="(" />
+            </div>
+            <div class="btnSign btnr1">
+              <input id="Button)" type="button" value=")" />
+            </div>
+            <div class="btnD btnr1">
+              <input id="Button/" type="button" value="/" />
+            </div>
+            <div class="btn7 btnr2">
+              <input id="Button7" type="button" value="7" />
+            </div>
+            <div class="btn8 btnr2">
+              <input id="Button8" type="button" value="8" />
+            </div>
+            <div class="btn9 btnr2">
+              <input id="Button9" type="button" value="9" />
+            </div>
+            <div class="btnX btnr1">
+              <input id="Button*" type="button" value="x" />
+            </div>
+            <div class="btn4 btnr2">
+              <input id="Button4" type="button" value="4" />
+            </div>
+            <div class="btn5 btnr2">
+              <input id="Button5" type="button" value="5" />
+            </div>
+            <div class="btn6 btnr2">
+              <input id="Button6" type="button" value="6" />
+            </div>
+            <div class="btnM btnr1">
+              <input id="Button-" type="button" value="-" />
+            </div>
+            <div class="btn1 btnr2">
+              <input id="Button1" type="button" value="1" />
+            </div>
+            <div class="btn2 btnr2">
+              <input id="Button2" type="button" value="2" />
+            </div>
+            <div class="btn3 btnr2">
+              <input id="Button3" type="button" value="3" />
+            </div>
+            <div class="btnAdd btnr1">
+              <input id="Button+" type="button" value="+" />
+            </div>
+            <div class="btnDecimal btnr2">
+              <input id="Button." type="button" value="." />
+            </div>
+            <div class="btn0 btnr2">
+              <input id="Button0" type="button" value="0" />
+            </div>
+            <div class="btnBack btnr2">
+              <input id="Button%" type="button" value="%" />
+            </div>
+            <div class="btnEq btnr1">
+              <input id="Button=" type="button" value="=" />
+            </div>
+          </div>
+        </div>
+      </form>
+      <br />
+      <br />
+      <br />
+    </div>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
